// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should pass through optional props 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin primaryNavWithCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent
          country="my"
        />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      >
        <span
          className="primaryNavLinkWrapper"
          key="0"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/home"
          >
            <Text
              baseline={true}
            >
              Home
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="1"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/myPortal"
          >
            <Text
              baseline={true}
            >
              MyPortal
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="2"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/resources"
          >
            <Text
              baseline={true}
            >
              Resources
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="3"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/career-insights"
          >
            <Text
              baseline={true}
            >
              CareerInsights
            </Text>
          </a>
        </span>
      </div>
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      activeTab="ACTIVE_TAB_HOME"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
      showMenu={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      links={
        Array [
          Object {
            "ItemIcon": [Function],
            "title": "Home",
            "url": "http://seekasia.com/home",
          },
          Object {
            "ItemIcon": [Function],
            "title": "MyPortal",
            "url": "http://seekasia.com/myPortal",
          },
          Object {
            "ItemIcon": [Function],
            "title": "Resources",
            "url": "http://seekasia.com/resources",
          },
          Object {
            "ItemIcon": [Function],
            "title": "CareerInsights",
            "url": "http://seekasia.com/career-insights",
          },
        ]
      }
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with default props 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin primaryNavWithCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with hide country 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="primaryNavNoLogin primaryNavNoCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with links list 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin primaryNavWithCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      >
        <span
          className="primaryNavLinkWrapper"
          key="0"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/home"
          >
            <Text
              baseline={true}
            >
              Home
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="1"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/myPortal"
          >
            <Text
              baseline={true}
            >
              MyPortal
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="2"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/resources"
          >
            <Text
              baseline={true}
            >
              Resources
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="3"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/career-insights"
          >
            <Text
              baseline={true}
            >
              CareerInsights
            </Text>
          </a>
        </span>
      </div>
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      links={
        Array [
          Object {
            "ItemIcon": [Function],
            "title": "Home",
            "url": "http://seekasia.com/home",
          },
          Object {
            "ItemIcon": [Function],
            "title": "MyPortal",
            "url": "http://seekasia.com/myPortal",
          },
          Object {
            "ItemIcon": [Function],
            "title": "Resources",
            "url": "http://seekasia.com/resources",
          },
          Object {
            "ItemIcon": [Function],
            "title": "CareerInsights",
            "url": "http://seekasia.com/career-insights",
          },
        ]
      }
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with login available 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNav primaryNavWithCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <div
        className="secondaryNav"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={true}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={true}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render without navigation menu 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin primaryNavWithCountry"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            jobsDB.com
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        headerMessage={
          Object {
            "appStore": Object {
              "title": "App Store",
              "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "applicationHistoryList": Object {
              "title": "Application History",
              "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
            },
            "careerInsights": Object {
              "title": "Career Insights",
              "url": "/hk/en/career-insights",
            },
            "downloadApp": "Download Our App",
            "employer": Object {
              "title": "For Employers",
              "url": "/hk/en/home/employerindex",
            },
            "homeTitle": "Home",
            "homeUrl": "/hk",
            "homeUrlText": "jobsDB.com",
            "invitation": Object {
              "title": "Job invitations",
              "url": "/hk/en/Invitations/InvitationList",
            },
            "jobAlertsList": Object {
              "title": "Job Alerts",
              "url": "/hk/en/MyJobsDB/JobAlertsList",
            },
            "jobsDBTitle": Object {
              "title": "My jobsDB",
              "url": "/hk/en/MyJobsDB",
            },
            "login": Object {
              "title": "Log in",
              "url": "/hk/en/login/jobseekerlogin?from=header",
            },
            "logout": Object {
              "title": "Log out",
              "url": "/hk/en/login/jobseekerlogoff",
            },
            "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
            "mobileLogoutUrl": "/logout.do",
            "playStore": Object {
              "title": "Google Play Store",
              "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
            },
            "profile": Object {
              "title": "View profile",
              "url": "/hk/en/MyJobsDB/profile",
            },
            "resources": Object {
              "title": "Resources",
              "url": "/en-hk/career-recruitment-advice/",
            },
            "resumesAndDocuments": Object {
              "title": "Resumes and Documents",
              "url": "/hk/en/MyJobsDB/resumes-and-documents",
            },
            "saveJobs": Object {
              "title": "Save Jobs",
              "url": "/saveJobs.do",
            },
            "searchUrl": "/hk/en/search/getsearchresult",
            "seperatorOr": "or",
            "signUp": Object {
              "title": "Sign up",
              "url": "/hk/en/jobseeker/registration",
            },
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      menuOpen={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      headerMessage={
        Object {
          "appStore": Object {
            "title": "App Store",
            "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "applicationHistoryList": Object {
            "title": "Application History",
            "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
          },
          "careerInsights": Object {
            "title": "Career Insights",
            "url": "/hk/en/career-insights",
          },
          "downloadApp": "Download Our App",
          "employer": Object {
            "title": "For Employers",
            "url": "/hk/en/home/employerindex",
          },
          "homeTitle": "Home",
          "homeUrl": "/hk",
          "homeUrlText": "jobsDB.com",
          "invitation": Object {
            "title": "Job invitations",
            "url": "/hk/en/Invitations/InvitationList",
          },
          "jobAlertsList": Object {
            "title": "Job Alerts",
            "url": "/hk/en/MyJobsDB/JobAlertsList",
          },
          "jobsDBTitle": Object {
            "title": "My jobsDB",
            "url": "/hk/en/MyJobsDB",
          },
          "login": Object {
            "title": "Log in",
            "url": "/hk/en/login/jobseekerlogin?from=header",
          },
          "logout": Object {
            "title": "Log out",
            "url": "/hk/en/login/jobseekerlogoff",
          },
          "mobileLoginUrl": "/login.do?nextPage=jobsForYou.do%3F",
          "mobileLogoutUrl": "/logout.do",
          "playStore": Object {
            "title": "Google Play Store",
            "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
          },
          "profile": Object {
            "title": "View profile",
            "url": "/hk/en/MyJobsDB/profile",
          },
          "resources": Object {
            "title": "Resources",
            "url": "/en-hk/career-recruitment-advice/",
          },
          "resumesAndDocuments": Object {
            "title": "Resumes and Documents",
            "url": "/hk/en/MyJobsDB/resumes-and-documents",
          },
          "saveJobs": Object {
            "title": "Save Jobs",
            "url": "/saveJobs.do",
          },
          "searchUrl": "/hk/en/search/getsearchresult",
          "seperatorOr": "or",
          "signUp": Object {
            "title": "Sign up",
            "url": "/hk/en/jobseeker/registration",
          },
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      menuMessage={
        Object {
          "backToMenu": "Back to menu",
          "countryAndLanguage": "Country & Language",
          "countryList": Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "languageDisplay": "English",
              "title": "Hong Kong (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "languageDisplay": "English",
              "title": "Indonesia (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "id",
              "languageDisplay": "Bahasa",
              "title": "Indonesia (Bahasa)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "sg",
              "language": "en",
              "languageDisplay": "English",
              "title": "Singapore (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "en",
              "languageDisplay": "English",
              "title": "Thailand (English)",
              "url": "",
            },
            Object {
              "ItemIcon": [Function],
              "country": "th",
              "language": "th",
              "languageDisplay": "ภาษาไทย",
              "title": "ไทย (ภาษาไทย)",
              "url": "",
            },
          ],
          "jobSeekerHeader": "JOB SEEKER",
          "jobSeekerProfile": "PROFILE",
          "more": "More",
          "moreHeader": "MORE",
          "settingsHeader": "SETTINGS",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;
